refactor(module-2): collapse duplicated market-id constants into MarketCatalog (C-16)